# GoHome

./: .gitignore  README.md  pyproject.toml
.github/workflows/: formatter.yml  linter.yml  pytest.yml  type-check.yml
src/: main.py
src/api/: api.py  outerlink.py  timetable.py  train.py  ui.py
src/back/source/sample/: sample.py
src/common/scripts/types/: parser.py
src/common/types/: api.py  outerlink.py  timetable.py  train.py  ui.py
src/front/page/: helloPage.py
src/mock/: outerlink.py
src/mocks/: outerlink.py  timetable.py  train.py  ui.py
tests/back/source/: test_sample.py
tests/mock/: test_outerlink.py
tests/mocks/: test_outerlink.py  test_timetable.py  test_train.py  test_ui.py
